--- a/Kids.html
+++ b/Kids.html
@@ -12,14 +12,13 @@
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
 {
-"name": "ANIMAX GLTH",  
-"image": "https://img5.pic.in.th/file/secure-sv1/ANIMAX111.png",  
-"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=284&tv=Animax|Singapore", 
-"referer": "https://goal-th.com/", 
-"info": "", 
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
-"info": "", "playInNatPlayer":"true" 
-},
+     "name": "Animax GLTH",
+     "image": "https://dookeela.live/uploads/1704038567.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=284&tv=Animax|Singapore",
+     "referer": "https://dookeela.live/",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
+    },
+
     {
      "name": "Astro Ceria",
      "image": "https://dookeela.live/uploads/1721687988.png",
