--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -21,7 +21,7 @@
 
 {
 				"name": "Nexter-BeInSport-Thailand",
-				"image": "https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Bein_sport_logo.png/2560px-Bein_sport_logo.png",
+				"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/Bein_sport_logo.png.jpg",
 				"imageScale": "fitStart",
 				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/NexterBeINSport.html",
 				"info": "Nexter-BeInSport",
