--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -21,7 +21,7 @@
 
 {
 				"name": "Nexter-BeInSport-Thailand",
-				"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/Bein_sport_logo.png.jpg",
+				"image": "https://seeklogo.com/images/B/bein-sport-1-logo-9DADBC761B-seeklogo.com.png",
 				"imageScale": "fitStart",
 				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/NexterBeINSport.html",
 				"info": "Nexter-BeInSport",
