--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -27,7 +27,7 @@
     },
 
 {
-     "name": "TruePremierFootball 1HD",
+     "name": "TruePremierFootball 1T",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
      "referer": "https://freetvdd.com",
