--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -49,7 +49,7 @@
 {
 				"name":	"Sports Nexter ALL-Channel ",
 				"author":  "Nexter",
-				"image":"https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Nexter_Logo.svg/2560px-Nexter_Logo.svg.png",
+				"image":"https://as2.ftcdn.net/v2/jpg/03/02/12/83/1000_F_302128359_q6aCwgAvdYZBPF4XSwxXddLPE0h3Kor1.jpg",
 				"url":"https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Sports%20Nexter%20ALLChannel.html",
 				"info": "Nexter-True Sport",
 				"import": "true"
@@ -60,7 +60,7 @@
 
 {
 				"name": "Nexter-OldMan-AllSports",
-				"image": "https://upload.wikimedia.org/wikipedia/commons/thumb/5/54/Logo_MAN.png/1200px-Logo_MAN.png",
+				"image": "https://img.freepik.com/premium-photo/close-up-mcdonalds-logo-white-background-generative-ai_1034044-47661.jpg",
 				"url": "https://wandering-oldman.github.io/sport/sport.html",
 				"info": "Nexter-PremierLeague",
 				"import": false
