--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -60,7 +60,7 @@
 
 {
 				"name": "NexterOldMan-AllSports",
-				"image": "https://e7.pngegg.com/pngimages/676/74/png-clipart-fast-food-mcdonald-s-logo-golden-arches-restaurant-mcdonalds-mcdonald-s-logo-miscellaneous-food-thumbnail.png",
+				"image": "https://static.vecteezy.com/system/resources/previews/020/190/610/non_2x/mcdonalds-logo-mcdonald-icon-free-free-vector.jpg",
 				"url": "https://wandering-oldman.github.io/sport/sport.html",
 				"info": "Nexter-PremierLeague",
 				"import": false
