--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -50,7 +50,7 @@
 
 
 {
-"name": "Nexter-Kids-Channel",
+"name": "Nexter-Cartoon-Channel",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/commons/f/fe/CARTOON_NETWORK_logo.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Kids.html",
@@ -68,7 +68,7 @@
 
 
 {
-"name": "Nexter-NEWS-Channel",
+"name": "Nexter-News-Channel",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/CNN.svg/1200px-CNN.svg.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/News%20Channel.html",
@@ -79,7 +79,7 @@
 
 
 {
-"name": "Nexter-หนังออนไลน์",
+"name": "Nexter---หนังออนไลน์",
 "author": "Nexter",
 "image": "https://t3.ftcdn.net/jpg/04/23/92/78/360_F_423927894_T9UIBqoqC1XOwLXlYa8j38VyxLUxO8ii.jpg",
 "url": "https://docs.google.com/uc?export=download&id=1O1YWCtWgsbbkCjIM18j-Wr86cgrjrkVV",
@@ -88,7 +88,7 @@
 
 
 {
-"name": "Nexter-ซีรี่ย์ออนไลน์",
+"name": "Nexter---ซีรี่ย์ออนไลน์",
 "author": "Nexter",
 "image": "https://as2.ftcdn.net/v2/jpg/04/23/92/79/1000_F_423927917_w4ACaqLIRByore0D1DkWLLiVJK2UbY6N.jpg",
 "url": "https://docs.google.com/uc?export=download&id=1GkuV1iE4E-sXHk09kPHQK3WiQIjGthc7",
