--- a/Ball Thai League.html
+++ b/Ball Thai League.html
@@ -476,6 +476,76 @@ userAgent:"Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/
 "url":"https://dookeela.live/live-tv/tsports7",
 "playInNatPlayer":"true"},
 
+{"name":"SiamSpots1-A🇯🇵",
+"image":"https://img2.pic.in.th/pic/ss14e4e2af505dcac0e.png",
+"url":"https://dookeela.live/live-tv/siamsport1",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots1-B🇯🇵",
+"image":"https://img2.pic.in.th/pic/ss14e4e2af505dcac0e.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport1/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots2-A🇯🇵",
+"image":"https://img5.pic.in.th/file/secure-sv1/ss28419984b6b487365.png",
+"url":"https://dookeela.live/live-tv/siamsport2",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots2-B🇯🇵",
+"image":"https://img5.pic.in.th/file/secure-sv1/ss28419984b6b487365.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport2/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots3-A🇯🇵",
+"image":"https://img2.pic.in.th/pic/ss31db82d0522d46d35.png",
+"url":"https://dookeela.live/live-tv/siamsport3",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots3-B🇯🇵",
+"image":"https://img2.pic.in.th/pic/ss31db82d0522d46d35.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport3/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots4-A🇯🇵",
+"image":"https://img5.pic.in.th/file/secure-sv1/ss44ad043925a6aa5d1.png",
+"url":"https://dookeela.live/live-tv/siamsport4",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots4-B🇯🇵",
+"image":"https://img5.pic.in.th/file/secure-sv1/ss44ad043925a6aa5d1.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport4/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+
+{"name":"TSports-A🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://www.inwiptv.com/player_demo.php?channel=27186",
+"referer":"https://www.inwiptv.com/",
+"userAgent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36",
+"desktop":	"true",
+"playInNatPlayer":"true"},
+
+{"name": "TSports-B🇹🇭",
+"image": "https://i.imgur.com/TFc4WRE.png",
+"url":"https://aisplay.ais.co.th/portal/live?vid=627a27b26dbfe345cfc8a27f",
+"referer":"https://ais-vidnt.com",
+userAgent:"Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1",
+"playInNatPlayer": "true"},
+
+{"name":"TSports-C🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://edge6a.v2h-cdn.com/t_sport/t_sport.stream/playlist.m3u8",
+"playInNatPlayer":"true"},
+
+{"name":"TSports-D🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://dookeela.live/live-tv/tsports7",
+"playInNatPlayer":"true"},
+
 
 
 ]
