--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -60,7 +60,7 @@
 
 {
 				"name": "NexterOldMan-AllSports",
-				"image": "https://static.vecteezy.com/system/resources/previews/020/190/610/non_2x/mcdonalds-logo-mcdonald-icon-free-free-vector.jpg",
+				"image": "https://cdn.pixabay.com/photo/2024/02/02/04/20/men-8547227_1280.png",
 				"url": "https://wandering-oldman.github.io/sport/sport.html",
 				"info": "Nexter-PremierLeague",
 				"import": false
