--- a/MovieChannel.html
+++ b/MovieChannel.html
@@ -450,6 +450,13 @@
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
     {
+     "name": "ROCK ENTERTAINMENT GLTH",
+     "image": "https://dookeela.live/uploads/1718690283.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=403&tv=ROCKENTERTAINMENT",
+     "referer": "https://dookeela.live/",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
+    },
+    {
      "name": "STARZ ENCORE | USA",
      "image": "https://dookeela.live/uploads/1705582013.png",
      "url": "https://dookeela.live/live-tv/starz-encore",
